--- a/PokerOmahaHi.vcxproj
+++ b/PokerOmahaHi.vcxproj
@@ -27,6 +27,7 @@
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="RectangleButton.cpp" />
+    <ClCompile Include="TriangleButton.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Button.h" />
@@ -36,6 +37,7 @@
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="RectangleButton.h" />
+    <ClInclude Include="TriangleButton.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
