reparticion de cartas, moverse entre jugadores, visualizar y ocultar las cartas

--- a/PokerOmahaHi.vcxproj.filters
+++ b/PokerOmahaHi.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClCompile Include="Deck.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
-    <ClCompile Include="Game.cpp">
+    <ClCompile Include="Poker.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
     <ClCompile Include="Player.cpp">
@@ -53,7 +53,7 @@
     <ClInclude Include="Deck.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
-    <ClInclude Include="Game.h">
+    <ClInclude Include="Poker.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="Player.h">
