--- a/PokerOmahaHi.vcxproj
+++ b/PokerOmahaHi.vcxproj
@@ -23,10 +23,13 @@
     <ClCompile Include="Card.cpp" />
     <ClCompile Include="Dealer.cpp" />
     <ClCompile Include="Deck.cpp" />
+    <ClCompile Include="List.cpp" />
+    <ClCompile Include="Node.cpp" />
     <ClCompile Include="Poker.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="PokerButton.cpp" />
     <ClCompile Include="RectangleButton.cpp" />
     <ClCompile Include="TriangleButton.cpp" />
   </ItemGroup>
@@ -35,9 +38,12 @@
     <ClInclude Include="Card.h" />
     <ClInclude Include="Dealer.h" />
     <ClInclude Include="Deck.h" />
+    <ClInclude Include="List.h" />
+    <ClInclude Include="Node.h" />
     <ClInclude Include="Poker.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="PokerButton.h" />
     <ClInclude Include="RectangleButton.h" />
     <ClInclude Include="TriangleButton.h" />
   </ItemGroup>
